--- a/files/es/web/html/element/b/index.html
+++ b/files/es/web/html/element/b/index.html
@@ -12,22 +12,16 @@ original_slug: Web/HTML/Elemento/b
 
 <p><strong>b</strong> de bold=negrita.</p>
 
-<p>Indica que el texto debe ser representado con una variable <strong>bold</strong>, o <strong>negrita,</strong><strong> </strong>de la tipografía que se esté usando.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: <code>&lt;b&gt;</code> y <code>&lt;/b&gt;</code> (Ambas obligatorias).</dd>
-</dl>
+<dt>Indica que el texto debe ser representado con una variable <strong>bold</strong>, o <strong>negrita,</strong><strong> </strong>de la tipografía que se esté usando.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: en línea.</dd>
-</dl>
-
-<dl>
- <dd><strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#de_estilo_de_fuente">de estilo de fuente</a> y por lo tanto <a href="es/HTML/Elemento/Tipos_de_elementos#en_l.C3.ADnea">en línea</a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Puede contener</strong>: Texto y/o cero o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#en_l.C3.ADnea">en línea</a>.</dd>
+ <dd><strong>Sus etiquetas son</strong>: <code>&lt;b&gt;</code> y <code>&lt;/b&gt;</code> (Ambas obligatorias).
+ 
+  <strong>Crea una caja</strong>: en línea.
+ 
+  <strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#de_estilo_de_fuente">de estilo de fuente</a> y por lo tanto <a href="es/HTML/Elemento/Tipos_de_elementos#en_l.C3.ADnea">en línea</a>.
+ 
+  <strong>Puede contener</strong>: Texto y/o cero o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#en_l.C3.ADnea">en línea</a>.</dd>
 </dl>
 
 <h5 id="Atributos" name="Atributos">Atributos</h5>
