--- a/files/es/web/html/element/base/index.html
+++ b/files/es/web/html/element/base/index.html
@@ -67,7 +67,7 @@ original_slug: Web/HTML/Elemento/base
 <pre class="brush: html line-numbers  language-html"><code class="language-html"><span class="tag token"><span class="tag token"><span class="punctuation token">&lt;</span>base</span> <span class="attr-name token">href</span><span class="attr-value token"><span class="punctuation token">=</span><span class="punctuation token">"</span>http://www.example.com/page.html<span class="punctuation token">"</span></span><span class="punctuation token">&gt;</span></span>
 <span class="tag token"><span class="tag token"><span class="punctuation token">&lt;</span>base</span> <span class="attr-name token">target</span><span class="attr-value token"><span class="punctuation token">=</span><span class="punctuation token">"</span>_blank<span class="punctuation token">"</span></span> <span class="attr-name token">href</span><span class="attr-value token"><span class="punctuation token">=</span><span class="punctuation token">"</span>http://www.example.com/page.html<span class="punctuation token">"</span></span><span class="punctuation token">&gt;</span></span></code></pre>
 
-<article class="approved text-content">
+<article class="">
 <div class="boxed translate-rendered">
 <h2 id="Specifications" name="Specifications">Especificaciones</h2>
 
