--- a/files/es/web/html/element/caption/index.html
+++ b/files/es/web/html/element/caption/index.html
@@ -10,22 +10,16 @@ original_slug: Web/HTML/Elemento/caption
 ---
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p>Es el encargado de darle un título descriptivo a las tablas.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: <code>&lt;caption&gt;</code> y <code>&lt;/caption&gt;</code> (ambas obligatorias).</dd>
-</dl>
+<dt>Es el encargado de darle un título descriptivo a las tablas.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: .</dd>
-</dl>
+ <dd><strong>Sus etiquetas son</strong>: <code>&lt;caption&gt;</code> y <code>&lt;/caption&gt;</code> (ambas obligatorias).
+ 
+ <strong>Crea una caja</strong>: .
 
-<dl>
- <dd><strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#para_tablas">para tablas</a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Puede contener</strong>: Texto y/o cero o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#en_l.C3.ADnea">en línea</a>.</dd>
+ <strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#para_tablas">para tablas</a>.
+ 
+ <strong>Puede contener</strong>: Texto y/o cero o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#en_l.C3.ADnea">en línea</a>.</dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
