--- a/files/es/web/html/element/del/index.html
+++ b/files/es/web/html/element/del/index.html
@@ -12,22 +12,16 @@ original_slug: Web/HTML/Elemento/del
 
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p>El elemento <code style="color: darkblue;">del</code> (deleted-borrado) marca las partes de un texto o documento que han sido suprimidas o sustituidas.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: &lt;del&gt; y &lt;/del&gt; (ambas obligatorias).</dd>
-</dl>
+<dt>El elemento <code style="color: darkblue;">del</code> (deleted-borrado) marca las partes de un texto o documento que han sido suprimidas o sustituidas.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: a veces <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a> a veces <a href="es/HTML/Elemento/Tipos_de_elementos#en_bloque">en bloque</a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Está definido como</strong>:</dd>
-</dl>
-
-<dl>
- <dd><strong>Puede contener</strong>: depende, si actua como un elemento en bloque puede contener elementos en bloque y en linea. Pero si actua como un elemento en linea solo podrá contener elementos en linea.</dd>
+ <dd><strong>Sus etiquetas son</strong>: &lt;del&gt; y &lt;/del&gt; (ambas obligatorias).
+ 
+ <strong>Crea una caja</strong>: a veces <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a> a veces <a href="es/HTML/Elemento/Tipos_de_elementos#en_bloque">en bloque</a>.
+ 
+ <strong>Está definido como</strong>:
+ 
+ <strong>Puede contener</strong>: depende, si actua como un elemento en bloque puede contener elementos en bloque y en linea. Pero si actua como un elemento en linea solo podrá contener elementos en linea.</dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
@@ -140,7 +134,7 @@ original_slug: Web/HTML/Elemento/del
 <p>Ejemplo de ins en linea:</p>
 
 <p>El agua es insípida</p>
-<del>y húmeda.</del> <ins>inodora e incolora.</ins>
+<del>y húmeda.</del> inodora e incolora.
 
 <p>Ejemplo de ins en bloque:</p>
 
