--- a/files/es/web/html/element/dir/index.html
+++ b/files/es/web/html/element/dir/index.html
@@ -12,23 +12,18 @@ original_slug: Web/HTML/Elemento/dir
 
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p>El elemento <code style="color: darkblue;">dir</code> (directorio) es un elemento desaprobado. En su origen fue pensado para crear directorios en multicolumna, en la actualidad es inutil.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: &lt;dir&gt; y &lt;/dir&gt; (ambas obligatorias).</dd>
-</dl>
+<dt>El elemento <code style="color: darkblue;">dir</code> (directorio) es un elemento desaprobado. En su origen fue pensado para crear directorios en multicolumna, en la actualidad es inutil.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_bloque">en bloque</a>.</dd>
-</dl>
+ <dd><strong>Sus etiquetas son</strong>: &lt;dir&gt; y &lt;/dir&gt; (ambas obligatorias).
+ 
+ <strong>Crea una caja</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_bloque">en bloque</a>.
+ 
+ <strong>Está definido como</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#desaprobado">Elemento DESAPROBADO</a>.
+ 
+ <strong>Puede contener</strong>: uno o más elementos <a href="es/HTML/Elemento/li">li</a>
 
-<dl>
- <dd><strong>Está definido como</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#desaprobado">Elemento DESAPROBADO</a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Puede contener</strong>: uno o más elementos <a href="es/HTML/Elemento/li">li</a></dd>
- <dd><strong>NO puede contener</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_bloque">Elementos en bloque</a></dd>
+ <strong>NO puede contener</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_bloque">Elementos en bloque</a></dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
