--- a/files/es/web/html/element/div/index.html
+++ b/files/es/web/html/element/div/index.html
@@ -10,16 +10,16 @@ original_slug: Web/HTML/Elemento/div
 ---
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p><strong>div</strong> de "division" -<em>división</em> . Sirve para crear secciones o agrupar contenidos.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: <code>&lt;div&gt;</code> y <code>&lt;/div&gt;</code> (ambas obligatorias).</dd>
- <dd><strong>Está definido como</strong>: <a href="https://developer.mozilla.org/es/docs/Web/HTML/Block-level_elements">Elemento en bloque</a>.</dd>
-</dl>
+<dt><strong>div</strong> de "division" -<em>división</em> . Sirve para crear secciones o agrupar contenidos.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: En bloque.</dd>
- <dd><strong>Puede contener</strong>: Texto, y/o cero o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#enbloque">en bloque</a> o <a href="es/HTML/Elemento/Tipos_de_elementos#enlinea">en linea</a>.</dd>
+ <dd><strong>Sus etiquetas son</strong>: <code>&lt;div&gt;</code> y <code>&lt;/div&gt;</code> (ambas obligatorias).
+
+ <strong>Está definido como</strong>: <a href="https://developer.mozilla.org/es/docs/Web/HTML/Block-level_elements">Elemento en bloque</a>.
+ 
+ <strong>Crea una caja</strong>: En bloque.
+
+ <strong>Puede contener</strong>: Texto, y/o cero o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#enbloque">en bloque</a> o <a href="es/HTML/Elemento/Tipos_de_elementos#enlinea">en linea</a>.</dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
