--- a/files/es/web/html/element/dl/index.html
+++ b/files/es/web/html/element/dl/index.html
@@ -16,7 +16,7 @@ original_slug: Web/HTML/Elemento/dl
 
 <div>{{EmbedInteractiveExample("pages/tabbed/dl.html", "tabbed-standard")}}</div>
 
-<p class="hidden">El contenido para este ejemplo interactivo se encuentra almacenado en un repositorio GitHub. Si deseas contribuir al proyecto de ejemplos interactivos, por favor clona <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples </a> y envía la petición de extración (pull request).</p>
+<p class="">El contenido para este ejemplo interactivo se encuentra almacenado en un repositorio GitHub. Si deseas contribuir al proyecto de ejemplos interactivos, por favor clona <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples </a> y envía la petición de extración (pull request).</p>
 
 <table class="properties">
  <tbody>
