--- a/files/es/web/html/element/dt/index.html
+++ b/files/es/web/html/element/dt/index.html
@@ -23,7 +23,7 @@ original_slug: Web/HTML/Elemento/dt
 
 <div>{{EmbedInteractiveExample("pages/tabbed/dt.html", "tabbed-standard")}}</div>
 
-<p class="hidden">La fuente para este ejemplo interactivo se encuetra almacenado en un repositorio GitHub. Si desea contribuir al proyecto de ejemplos interactivos, por favor clone <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples </a>y envíe una petición de extración (pull request).</p>
+<p class="">La fuente para este ejemplo interactivo se encuetra almacenado en un repositorio GitHub. Si desea contribuir al proyecto de ejemplos interactivos, por favor clone <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples </a>y envíe una petición de extración (pull request).</p>
 
 <table class="properties">
  <tbody>
