--- a/files/es/web/html/element/figcaption/index.html
+++ b/files/es/web/html/element/figcaption/index.html
@@ -78,7 +78,7 @@ original_slug: Web/HTML/Elemento/figcaption
 
 <h2 id="Compatibilidad_con_los_distintos_navegadores">Compatibilidad con los distintos navegadores</h2>
 
-<div class="hidden">
+<div class="">
 <p>The compatibility table in this page is generated from structured data. If you'd like to contribute to the data, please check out <a href="https://github.com/mdn/browser-compat-data">https://github.com/mdn/browser-compat-data</a> and send us a pull request.</p>
 </div>
 
