--- a/files/es/web/html/element/form/index.html
+++ b/files/es/web/html/element/form/index.html
@@ -64,8 +64,8 @@ original_slug: Web/HTML/Elemento/form
   <dt>
     {{ htmlattrdef("enctype") }}</dt>
   <dd>
-    Cuando el valor del atributo <code>method</code> es <span style="font-family: Courier New;">post</span>, este atributo es el  <a href="http://en.wikipedia.org/wiki/Mime_type">tipo MIME</a> del contenido que es usado para enviar el formulario al servidor.</dd>
-  <dd>
+    Cuando el valor del atributo <code>method</code> es <span style="font-family: Courier New;">post</span>, este atributo es el  <a href="http://en.wikipedia.org/wiki/Mime_type">tipo MIME</a> del contenido que es usado para enviar el formulario al servidor.
+
     Los posibles valores son:
     <ul>
       <li><span style="font-family: Courier New;">application/x-www-form-urlencoded</span>: El valor por defecto si un atributo no está especificado.</li>
