--- a/files/es/web/html/element/frameset/index.html
+++ b/files/es/web/html/element/frameset/index.html
@@ -10,21 +10,20 @@ original_slug: Web/HTML/Elemento/frameset
 ---
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p><strong>frameset</strong> -<em>conjunto de marcos</em> . Define la organización de los marcos dentro de la ventana del usuario.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: <code>&lt;frameset&gt;</code> y <code>&lt;/frameset&gt;</code> (ambas obligatorias).</dd>
- <dd><strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#paramarcos">para marcos</a>.
- <dl>
-  <dd>Con un doctype para marcos está definido como contenido de html.</dd>
- </dl>
- </dd>
-</dl>
+<dt><strong>frameset</strong> -<em>conjunto de marcos</em> . Define la organización de los marcos dentro de la ventana del usuario.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: .</dd>
- <dd><strong>Puede y debe contener</strong>: Uno o más elementos <a href="es/HTML/Elemento/frameset">frameset</a> y <a href="es/HTML/Elemento/frame">frame</a>. además puede contener un elemento <a href="es/HTML/Elemento/noframes">noframes</a>.</dd>
- <dd><strong>Debe ser contenido por</strong>: Elementos <a href="es/HTML/Elemento/html">html</a></dd>
+ <dd><strong>Sus etiquetas son</strong>: <code>&lt;frameset&gt;</code> y <code>&lt;/frameset&gt;</code> (ambas obligatorias).
+
+ <strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#paramarcos">para marcos</a>.
+  
+ Con un doctype para marcos está definido como contenido de html.
+ 
+ <strong>Crea una caja</strong>: .
+
+ <strong>Puede y debe contener</strong>: Uno o más elementos <a href="es/HTML/Elemento/frameset">frameset</a> y <a href="es/HTML/Elemento/frame">frame</a>. además puede contener un elemento <a href="es/HTML/Elemento/noframes">noframes</a>.
+
+ <strong>Debe ser contenido por</strong>: Elementos <a href="es/HTML/Elemento/html">html</a></dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
