--- a/files/es/web/html/element/input/index.html
+++ b/files/es/web/html/element/input/index.html
@@ -109,8 +109,9 @@ original_slug: Web/HTML/Elemento/input
  </ul>
  <a href="https://developer.apple.com/library/safari/documentation/AppleApplications/Reference/SafariHTMLRef/Articles/Attributes.html#//apple_ref/doc/uid/TP40008058-autocapitalize">Documentation sobre <code>autocapitalize</code> en la Referencia HTML de Safari</a></dd>
  <dt>{{htmlattrdef("autocomplete")}} {{HTMLVersionInline("5")}}</dt>
- <dd>Este atributo indica si el valor del control puede ser completado automáticamente por el navegador.</dd>
- <dd>Los valores posibles son:
+ <dd>Este atributo indica si el valor del control puede ser completado automáticamente por el navegador.
+
+ Los valores posibles son:
  <ul>
   <li><code>off</code>: El usuario debe explícitamente introducir un valor en este campo para cualquier uso, o el documento provee su propio método de auto-completado. El navegador no completa automáticamente lo introducido.</li>
   <li><code>on</code>: Se permite al navegador completar automáticamente el valor basado en los valores que se han introducido previamente. Sin embargo, <code>on</code> no provee mayor información sobre qué clase de datos podría esperar el usuario introducir.</li>
