--- a/files/es/web/html/element/input/range/index.html
+++ b/files/es/web/html/element/input/range/index.html
@@ -119,34 +119,19 @@ original_slug: Web/HTML/Elemento/input/range
 
 <p>Cuando no especificas un atributo {{htmlattrxref("list", "input")}} al input range, un navegador que lo soporte mostrará lo siguie.</p>
 
-<table class="fullwidth standard-table">
- <tbody>
-  <tr>
-   <th>HTML</th>
-   <th>Captura de pantalla</th>
-  </tr>
-  <tr>
-   <td>
+   HTML
     <pre class="brush: html">
 &lt;input type="range"&gt;</pre>
-   </td>
-   <td><img alt="Screenshot of a plain slider control on macOS" src="https://mdn.mozillademos.org/files/14989/macslider-plain.png" style="height: 28px; width: 184px;"></td>
-  </tr>
- </tbody>
-</table>
+
+
+   Captura de pantalla
+   <img alt="Screenshot of a plain slider control on macOS" src="https://mdn.mozillademos.org/files/14989/macslider-plain.png" style="height: 28px; width: 184px;">
 
 <h5 id="Un_control_rango_con_marcas">Un control rango con marcas</h5>
 
 <p>El siguiente rango utiliza el atributo <code>list</code> (al cual le especificamos el ID del elemento {{HTMLElement("datalist")}}) para definir la serie de marcas del rango. Hay once marcas, cada una de ellas mide un 10%, representadas por el  {{htmlattrxref("value", "option")}} de cada elemento {{HTMLElement("option")}}.</p>
 
-<table class="fullwidth standard-table">
- <tbody>
-  <tr>
-   <th>HTML</th>
-   <th>Captura de pantalla</th>
-  </tr>
-  <tr>
-   <td>
+   HTML
     <pre class="brush: html">
 &lt;input type="range" list="tickmarks"&gt;
 
@@ -164,24 +149,15 @@ original_slug: Web/HTML/Elemento/input/range
   &lt;option value="100"&gt;
 &lt;/datalist&gt;
 </pre>
-   </td>
-   <td><img alt="Screenshot of a plain slider control on macOS" src="https://mdn.mozillademos.org/files/14991/macslider-ticks.png" style="height: 28px; width: 184px;"></td>
-  </tr>
- </tbody>
-</table>
+   
+Captura de pantalla
+   <img alt="Screenshot of a plain slider control on macOS" src="https://mdn.mozillademos.org/files/14991/macslider-ticks.png" style="height: 28px; width: 184px;">
 
 <h5 id="Un_control_rango_con_marcas_y_etiquetas">Un control rango con marcas y etiquetas</h5>
 
 <p>Puedes añadir etiquetas a tu control range usando el atributo {{htmlattrxref("label", "option")}} al elemento {{HTMLElement("option")}} correspondiente a cada marca que desees etiquetar.</p>
 
-<table class="fullwidth standard-table">
- <tbody>
-  <tr>
-   <th>HTML</th>
-   <th>Captura de pantalla</th>
-  </tr>
-  <tr>
-   <td>
+   HTML
     <pre class="brush: html">
 &lt;input type="range" list="tickmarks"&gt;
 
@@ -199,11 +175,9 @@ original_slug: Web/HTML/Elemento/input/range
   &lt;option value="100" label="100%"&gt;
 &lt;/datalist&gt;
 </pre>
-   </td>
-   <td><img alt="Screenshot of a plain slider control on macOS" src="https://mdn.mozillademos.org/files/14993/macslider-labels.png" style="height: 44px; width: 184px;"></td>
-  </tr>
- </tbody>
-</table>
+   
+Captura de pantalla
+   <img alt="Screenshot of a plain slider control on macOS" src="https://mdn.mozillademos.org/files/14993/macslider-labels.png" style="height: 44px; width: 184px;">
 
 <div class="note">
 <p><strong>Nota</strong>: Actualmente, ningún navegador soporta todas estas características. Firefox no soporta ni marcas ni etiquetas, mientras que Chrome soporta las marcas pero no las etiquetas.</p>
@@ -211,7 +185,7 @@ original_slug: Web/HTML/Elemento/input/range
 
 <h3 id="Cambiar_la_orientación">Cambiar la orientación</h3>
 
-<div class="hidden">
+<div class="">
 <p>Por defecto, si un navegador renderiza un input range, lo mostrará como un "slider" (deslizador) que se desliza hacia la izquierda y hacia la derecha. By default, if a browser renders a range input as a slider, it will render it so that the knob slides left and right. Sin embargo puedes cambiar esto fácilmente para que se deslice hacia arriba y hacia abajo simplemente usando CSS</p>
 
 <div class="note">
@@ -289,12 +263,12 @@ Después ponemos la información para el elemento <code>&lt;input&gt;</code>:
 
 <h2 id="Validación">Validación</h2>
 
-<div class="g-unit" id="gt-res-c">
+<div class="" id="gt-res-c">
 <div id="gt-res-p">
 <div id="gt-res-data">
 <div id="gt-res-wrap">
 <div id="gt-res-content">
-<div class="trans-verified-button-small" dir="ltr" id="gt-res-dir-ctr">
+<div class="" id="gt-res-dir-ctr">
 <div id="tts_button"> </div>
 <span id="result_box" lang="es"><span>No hay un patrón de validación</span></span><span lang="es"><span> disponible;</span> <span>sin embargo, se realizan las siguientes formas de validación automática:</span></span></div>
 </div>
