--- a/files/es/web/html/element/marquee/index.html
+++ b/files/es/web/html/element/marquee/index.html
@@ -25,8 +25,9 @@ original_slug: Web/HTML/Elemento/marquee
 
 <dl>
  <dt>{{htmlattrdef("behavior")}}</dt>
- <dd>Establece cómo se desplazará el texto en la etiqueta marquee. Los valores posibles son scroll, slide, y alternate. Si no hay un valor especificado, el valor por defecto establecido es scroll.</dd>
- <dd>Scroll: Hara que lo que este en la marquesina se mueva de derecha a izquierda, de manera ininterrumpida.<br>
+ <dd>Establece cómo se desplazará el texto en la etiqueta marquee. Los valores posibles son scroll, slide, y alternate. Si no hay un valor especificado, el valor por defecto establecido es scroll.
+ 
+ Scroll: Hara que lo que este en la marquesina se mueva de derecha a izquierda, de manera ininterrumpida.<br>
  Slide: Una vez que completa el recorrido de derecha a izquierda(por defecto) se detiene.<br>
  Alternate: Se movera de una esquina a la otra, dando el efecto de rebote.</dd>
  <dt>{{htmlattrdef("bgcolor")}}</dt>
