--- a/files/es/web/html/element/meta/index.html
+++ b/files/es/web/html/element/meta/index.html
@@ -10,17 +10,18 @@ original_slug: Web/HTML/Elemento/meta
 ---
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p><strong>meta</strong> de "metainformation" - metainformación. Sirve para aportar información sobre el documento..</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: <code>&lt;meta&gt;</code> (solo tiene una).</dd>
- <dd><strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#de_cabecera">de cabecera</a>.</dd>
-</dl>
+<dt><strong>meta</strong> de "metainformation" - metainformación. Sirve para aportar información sobre el documento..</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: No.</dd>
- <dd><strong>Puede contener</strong>: Nada.</dd>
- <dd><strong>Puede ser contenido por</strong>: Elementos <a href="es/HTML/Elemento/head">head</a></dd>
+ <dd><strong>Sus etiquetas son</strong>: <code>&lt;meta&gt;</code> (solo tiene una).
+
+ <strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#de_cabecera">de cabecera</a>.
+ 
+ <strong>Crea una caja</strong>: No.
+
+ <strong>Puede contener</strong>: Nada.
+
+ <strong>Puede ser contenido por</strong>: Elementos <a href="es/HTML/Elemento/head">head</a></dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
