--- a/files/es/web/html/element/samp/index.html
+++ b/files/es/web/html/element/samp/index.html
@@ -15,26 +15,20 @@ original_slug: Web/HTML/Elemento/samp
 
 <div>{{EmbedInteractiveExample("pages/tabbed/samp.html", "tabbed-shorter")}}</div>
 
-<p class="hidden">The source for this interactive example is stored in a GitHub repository. If you'd like to contribute to the interactive examples project, please clone <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples </a> and send us a pull request.</p>
+<p class="">The source for this interactive example is stored in a GitHub repository. If you'd like to contribute to the interactive examples project, please clone <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples </a> and send us a pull request.</p>
 
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p>Señala lo que es una salida de un programa.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: &lt;samp&gt; y &lt;/samp&gt; (ambas obligatorias)</dd>
-</dl>
+<dt>Señala lo que es una salida de un programa.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Está definido como</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#de_frase">Elemento de frase</a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Puede contener</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a></dd>
+ <dd><strong>Sus etiquetas son</strong>: &lt;samp&gt; y &lt;/samp&gt; (ambas obligatorias)
+ 
+ <strong>Crea una caja</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a>.
+ 
+ <strong>Está definido como</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#de_frase">Elemento de frase</a>.
+ 
+ <strong>Puede contener</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a></dd>
 </dl>
 
 <h5 id="Atributos_Gen.C3.A9ricos" name="Atributos_Gen.C3.A9ricos">Atributos Genéricos</h5>
@@ -44,11 +38,9 @@ original_slug: Web/HTML/Elemento/samp
  <li>style (información de estilo en línea)</li>
 </ul>
 
-<dl>
- <dd><strong>Identificadores</strong>: id, class (identificadores a nivel de documento)</dd>
- <dd><strong>Idioma</strong>: lang (información sobre el idioma), dir (dirección del texto)</dd>
- <dd><strong>Eventos</strong>: onclick, ondblclick, onmousedown, onmouseup, onmouseover, onmousemove, onmouseout, onkeypress, onkeydown, onkeyup.</dd>
-</dl>
+<strong>Identificadores</strong>: id, class (identificadores a nivel de documento)
+<strong>Idioma</strong>: lang (información sobre el idioma), dir (dirección del texto)
+<strong>Eventos</strong>: onclick, ondblclick, onmousedown, onmouseup, onmouseover, onmousemove, onmouseout, onkeypress, onkeydown, onkeyup.
 
 <h5 id="Atributos_Espec.C3.ADficos_-_No_tiene." name="Atributos_Espec.C3.ADficos_-_No_tiene.">Atributos Específicos - No tiene.</h5>
 
