--- a/files/es/web/html/element/select/index.html
+++ b/files/es/web/html/element/select/index.html
@@ -80,7 +80,7 @@ original_slug: Web/HTML/Elemento/select
 
 <h4 id="Resultado">Resultado</h4>
 
-<p><select name="select"><option value="value1">Value 1</option><option selected value="value2">Value 2</option><option value="value3">Value 3</option></select></p>
+<code><select name="select"><option value="value1">Value 1</option><option selected value="value2">Value 2</option><option value="value3">Value 3</option></select></code>
 
 <h3 id="Notas">Notas</h3>
 
