--- a/files/es/web/html/element/slot/index.html
+++ b/files/es/web/html/element/slot/index.html
@@ -59,8 +59,9 @@ original_slug: Web/HTML/Elemento/slot
 
 <dl>
  <dt>   {{htmlattrdef("name")}}</dt>
- <dd>El nombre del slot.</dd>
- <dd><dfn>Un<strong> </strong></dfn><strong><dfn>slot nombrado</dfn></strong> es un elemento <code>&lt;slot&gt;</code>  con el atributo  <code>name</code>.</dd>
+ <dd>El nombre del slot.
+
+ <dfn>Un<strong> </strong></dfn><strong><dfn>slot nombrado</dfn></strong> es un elemento <code>&lt;slot&gt;</code>  con el atributo  <code>name</code>.</dd>
 </dl>
 
 <h2 id="Ejemplos">Ejemplos</h2>
