--- a/files/es/web/html/element/style/index.html
+++ b/files/es/web/html/element/style/index.html
@@ -10,17 +10,18 @@ original_slug: Web/HTML/Elemento/style
 ---
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p><strong>style</strong> - estilo. Es el elemento encargado de indicar la información de estilo.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: <code>&lt;style&gt;</code> y <code>&lt;/style&gt;</code> (ambas obligatorias).</dd>
- <dd><strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#decabecera">de cabecera</a>.</dd>
-</dl>
+<dt><strong>style</strong> - estilo. Es el elemento encargado de indicar la información de estilo.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: No.</dd>
- <dd><strong>Puede contener</strong>: Declaraciones de estilo.</dd>
- <dd><strong>Debe ser contenido por</strong>: Elementos <a href="es/HTML/Elemento/Tipos_de_elementos#head">head</a>.</dd>
+ <dd><strong>Sus etiquetas son</strong>: <code>&lt;style&gt;</code> y <code>&lt;/style&gt;</code> (ambas obligatorias).
+
+ <strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#decabecera">de cabecera</a>.
+ 
+ <strong>Crea una caja</strong>: No.
+
+ <strong>Puede contener</strong>: Declaraciones de estilo.
+
+ <strong>Debe ser contenido por</strong>: Elementos <a href="es/HTML/Elemento/Tipos_de_elementos#head">head</a>.</dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
