--- a/files/es/web/html/element/sup/index.html
+++ b/files/es/web/html/element/sup/index.html
@@ -80,13 +80,13 @@ original_slug: Web/HTML/Elemento/sup
   <tr>
    <td><a class="external external-icon" href="https://html.spec.whatwg.org/multipage/semantics.html#the-sub-and-sup-elements" hreflang="en" lang="en">HTML Living Standard<br>
     <small lang="es">The definition of '&lt;sub&gt; and &lt;sup&gt;' in that specification.</small></a></td>
-   <td><span class="spec-Living">Living Standard</span></td>
+   <td><span class="">Living Standard</span></td>
    <td> </td>
   </tr>
   <tr>
    <td><a class="external external-icon" href="http://www.w3.org/TR/html5/textlevel-semantics.html#the-sub-and-sup-elements" hreflang="en" lang="en">HTML5<br>
     <small lang="es">The definition of '&lt;sub&gt; and &lt;sup&gt;;' in that specification.</small></a></td>
-   <td><span class="spec-REC">Recommendation</span></td>
+   <td><span class="">Recommendation</span></td>
    <td> </td>
   </tr>
  </tbody>
