--- a/files/es/web/html/global_attributes/itemref/index.html
+++ b/files/es/web/html/global_attributes/itemref/index.html
@@ -12,12 +12,12 @@ original_slug: Web/HTML/Atributos_Globales/itemref
 
 <p class="note"><strong>Nota: </strong>el atributo itemref no es parte del modelo de micro datos . Es solamente un constructor sintáctico que ayuda a los autores en el ingreso de anotaciones a las páginas donde los datos que se van a anotar no siguen una estructura de arbol conveniente . Por ejemplo , permite a los autores marcar los datos en una tabla para que cada columna defina un item separado mientras se mantienen las propiedades en las celdas .</p>
 
-<div class="syntaxbox">
-<h2 class="syntaxbox" id="Ejemplo">Ejemplo</h2>
+<div class="">
+<h2 class="" id="Ejemplo">Ejemplo</h2>
 
 <h3 id="HTML">HTML</h3>
 
-<div class="syntaxbox">
+<div class="">
 <pre class="brush: html">&lt;div itemscope id="amanda" itemref="a b"&gt;&lt;/div&gt;
 &lt;p id="a"&gt;Name: &lt;span itemprop="name"&gt;Amanda&lt;/span&gt; &lt;/p&gt;
 &lt;div id="b" itemprop="band" itemscope itemref="c"&gt;&lt;/div&gt;
@@ -87,7 +87,7 @@ original_slug: Web/HTML/Atributos_Globales/itemref
 
 <p>{{ EmbedLiveSample('Example', '', '', '', 'Web/HTML/Global_attributes/itemref') }}</p>
 
-<h2 id="EspecificaciónEditEdit">Especificación<a class="only-icon button section-edit new" href="https://developer.mozilla.org/en-US/docs/Web/CSS/font-variant-alternates$edit#Specifications"><span>Edit</span></a><a class="only-icon button section-edit new" href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/itemid$edit#SpecificationsEdit"><span>Edit</span></a></h2>
+<h2 id="EspecificaciónEditEdit">Especificación<a class="" href="https://developer.mozilla.org/en-US/docs/Web/CSS/font-variant-alternates$edit#Specifications"><span>Edit</span></a><a class="" href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/itemid$edit#SpecificationsEdit"><span>Edit</span></a></h2>
 
 <table class="standard-table" style="height: 105px; width: 490px;">
  <thead>
