--- a/files/es/web/html/index.html
+++ b/files/es/web/html/index.html
@@ -46,7 +46,7 @@ translation_of: Web/HTML
 
 <div class="row topicpage-table">
 <div class="section">
-<h2 class="Tools" id="Tutoriales_para_principiantes">Tutoriales para principiantes</h2>
+<h2 class="" id="Tutoriales_para_principiantes">Tutoriales para principiantes</h2>
 
 <p>El <a href="/es/docs/Learn/HTML">Área de aprendizaje de HTML</a> incluye varios módulos que enseñan HTML desde cero, sin necesidad de conocimientos previos.</p>
 
@@ -76,7 +76,7 @@ translation_of: Web/HTML
 </div>
 
 <div class="section">
-<h2 class="Documentation" id="Referencias">Referencias</h2>
+<h2 class="" id="Referencias">Referencias</h2>
 
 <dl>
  <dt class="landingPageList"><a href="/es/docs/Web/HTML/Reference">Referencia HTML</a></dt>
@@ -99,7 +99,7 @@ translation_of: Web/HTML
  <dd class="landingPageList">Información histórica sobre el modo peculiar («<em>Quirks</em>» en inglés) y el modo estándar.</dd>
 </dl>
 
-<h2 class="landingPageList" id="Temas_relacionados">Temas relacionados</h2>
+<h2 class="" id="Temas_relacionados">Temas relacionados</h2>
 
 <dl>
  <dt><a href="/es/docs/Web/HTML/Applying_color">Aplicación de color a elementos HTML mediante CSS</a></dt>
