--- a/files/es/web/html/microdata/index.html
+++ b/files/es/web/html/microdata/index.html
@@ -91,11 +91,11 @@ original_slug: Web/HTML/Microdatos
 
 <h3 id="Datos_estructurados">Datos estructurados</h3>
 
-<div class="VIpgJd-VgwJlc-bN97Pc">
-<div class="ibnC6b-sM5MNb">
-<div class="NbYDle">
-<div class="SmKAyb-jyrRxf IQ5j-oKdM2c" style="padding-left: 0px;">
-<div class="jyrRxf-eEDwDf l5asRc">
+<div class="">
+<div class="">
+<div class="">
+<div class="" style="padding-left: 0px;">
+<div class="">
 <table class="standard-table">
  <tbody>
   <tr>
