--- a/files/es/web/html/element/acronym/index.html
+++ b/files/es/web/html/element/acronym/index.html
@@ -12,22 +12,16 @@ original_slug: Web/HTML/Elemento/acronym
 
 <p><strong>acromym</strong> de acromyn=acrónimo</p>
 
-<p>Es el encargado para marcar estas formas abreviadas (modem, AJAX...). Además, gracias al atributo <code style="color: green;">title</code> podemos indicar la versión extendida del término.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: &lt;abbr&gt; y &lt;/abbr&gt; (ambas obligatorias).</dd>
-</dl>
+<dt>Es el encargado para marcar estas formas abreviadas (modem, AJAX...). Además, gracias al atributo <code style="color: green;">title</code> podemos indicar la versión extendida del término.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Está definido como</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#de_frase">Elemento de frase</a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Puede contener</strong>: cero o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a></dd>
+ <dd><strong>Sus etiquetas son</strong>: &lt;abbr&gt; y &lt;/abbr&gt; (ambas obligatorias).
+ 
+ <strong>Crea una caja</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a>.
+ 
+ <strong>Está definido como</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#de_frase">Elemento de frase</a>.
+ 
+ <strong>Puede contener</strong>: cero o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a></dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
