--- a/files/es/web/html/element/applet/index.html
+++ b/files/es/web/html/element/applet/index.html
@@ -10,22 +10,16 @@ original_slug: Web/HTML/Elemento/applet
 ---
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p>Permite añadir un applet Java en un documento HTML. Es un elemento <a href="es/HTML/Elemento/Tipos_de_elementos#Desaprobado">Desaprobado</a> En su lugar debe usarse el elemento <a href="es/HTML/Elemento/object">object</a>, su uso solo es válido declarando el dtd transicional.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: &lt;applet&gt; y &lt;/applet&gt; (ambas obligatorias)</dd>
-</dl>
+<dt>Permite añadir un applet Java en un documento HTML. Es un elemento <a href="es/HTML/Elemento/Tipos_de_elementos#Desaprobado">Desaprobado</a> En su lugar debe usarse el elemento <a href="es/HTML/Elemento/object">object</a>, su uso solo es válido declarando el dtd transicional.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Está definido como</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#Especiales">Elemento especial</a>. <a href="es/HTML/Elemento/Tipos_de_elementos#Desaprobado">Desaprobado</a></dd>
-</dl>
-
-<dl>
- <dd><strong>Puede contener</strong> cero o más elementos param o del tipo 'en flujo'.</dd>
+ <dd><strong>Sus etiquetas son</strong>: &lt;applet&gt; y &lt;/applet&gt; (ambas obligatorias)
+ 
+ <strong>Crea una caja</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a>.
+ 
+ <strong>Está definido como</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#Especiales">Elemento especial</a>. <a href="es/HTML/Elemento/Tipos_de_elementos#Desaprobado">Desaprobado</a>
+ 
+ <strong>Puede contener</strong> cero o más elementos param o del tipo 'en flujo'.</dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
