--- a/files/es/web/html/element/bdo/index.html
+++ b/files/es/web/html/element/bdo/index.html
@@ -12,22 +12,16 @@ original_slug: Web/HTML/Elemento/bdo
 
 <p><strong>bdo</strong> Bi-Directional Overriding=Anulación de bidireccionalidad.</p>
 
-<p>La dirección de escritura del texto está relacionada con el idioma y se declara con el atributo dir. Pero en ocasiones esto no es suficiente, entonces entra en juego el elemento <a href="es/HTML/Elemento/bdo">bdo</a> (anulación del algoritmo bidireccional) que al anular el algoritmo permite un control total de la direccionalidad.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: &lt;bdo&gt; y &lt;/bdo&gt; (ambas obligatorias).</dd>
-</dl>
+<dt>La dirección de escritura del texto está relacionada con el idioma y se declara con el atributo dir. Pero en ocasiones esto no es suficiente, entonces entra en juego el elemento <a href="es/HTML/Elemento/bdo">bdo</a> (anulación del algoritmo bidireccional) que al anular el algoritmo permite un control total de la direccionalidad.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: En línea.</dd>
-</dl>
-
-<dl>
- <dd><strong>Está definido como</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#especial">Elemento especial</a> y por lo tanto <a href="es/HTML/Elemento/Tipos_de_elementos#en_l.C3.ADnea">en línea</a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Puede contener</strong>: Texto y/o cero o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#en_l.C3.ADnea">en línea</a>.</dd>
+ <dd><strong>Sus etiquetas son</strong>: &lt;bdo&gt; y &lt;/bdo&gt; (ambas obligatorias).
+ 
+  <strong>Crea una caja</strong>: En línea.
+ 
+  <strong>Está definido como</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#especial">Elemento especial</a> y por lo tanto <a href="es/HTML/Elemento/Tipos_de_elementos#en_l.C3.ADnea">en línea</a>.
+ 
+  <strong>Puede contener</strong>: Texto y/o cero o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#en_l.C3.ADnea">en línea</a>.</dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
