--- a/files/es/web/html/element/big/index.html
+++ b/files/es/web/html/element/big/index.html
@@ -12,22 +12,16 @@ original_slug: Web/HTML/Elemento/big
 
 <p><strong>big</strong> de big=grande</p>
 
-<p>Muestra el texto marcado con un tamaño de fuente más grande. El tamaño de la fuente puede definirse en una escala del 1 al 7, <strong>big</strong> aumenta este valor en un punto.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: <code>&lt;big&gt;</code> y <code>&lt;/big&gt;</code> (Ambas obligatorias).</dd>
-</dl>
+<dt>Muestra el texto marcado con un tamaño de fuente más grande. El tamaño de la fuente puede definirse en una escala del 1 al 7, <strong>big</strong> aumenta este valor en un punto.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: En línea.</dd>
-</dl>
-
-<dl>
- <dd><strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#de_estilo_de_fuente">de estilo de fuente</a> y por lo tanto <a href="es/HTML/Elemento/Tipos_de_elementos#en_l.C3.ADnea">en línea</a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Puede contener</strong>: Texto y/o cero o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#en_l.C3.ADnea">en línea</a>.</dd>
+ <dd><strong>Sus etiquetas son</strong>: <code>&lt;big&gt;</code> y <code>&lt;/big&gt;</code> (Ambas obligatorias).
+ 
+ <strong>Crea una caja</strong>: En línea.
+ 
+ <strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#de_estilo_de_fuente">de estilo de fuente</a> y por lo tanto <a href="es/HTML/Elemento/Tipos_de_elementos#en_l.C3.ADnea">en línea</a>.
+ 
+ <strong>Puede contener</strong>: Texto y/o cero o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#en_l.C3.ADnea">en línea</a>.</dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
