--- a/files/es/web/html/element/button/index.html
+++ b/files/es/web/html/element/button/index.html
@@ -14,13 +14,16 @@ original_slug: Web/HTML/Elemento/button
 
 <p>Es el elemento crea botones marcadores.</p>
 
-<p><span class="seoSummary">La etiqueta de<strong> HTML <code>&lt;button&gt;</code> </strong>representa un elemento cliqueable de tipo botón que puede ser utilizado en formularios o en cualquier parte de la página que necesite un botón estándar y simple de aplicar.</span> De forma predeterminada, los botones HTML se presentan con un estilo similar en todas las plataformas, estos estilos se pueden cambiar utilizando <a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a>.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: &lt;button&gt; y &lt;/button&gt; (ambas obligatorias).</dd>
- <dd><strong>Crea una caja</strong>: en linea.</dd>
- <dd><strong>Está definido como</strong>: <a href="/es/docs/HTML/Elemento/Tipos_de_elementos#de_frase" title="HTML/Elemento/Tipos_de_elementos#de_frase">Elemento de control para formulario</a>.</dd>
- <dd><strong>Puede contener</strong>: Texto y/o cero o más elementos <a href="/es/docs/HTML/Elemento/Tipos_de_elementos#en_linea" title="HTML/Elemento/Tipos_de_elementos#en_linea">en Bloque</a> o <a href="/es/docs/HTML/Elemento/Tipos_de_elementos#en_linea" title="HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a>, con las siguientes excepciones: (A|%formctrl;|FORM|FIELDSET)</dd>
+<dt><span class="seoSummary">La etiqueta de<strong> HTML <code>&lt;button&gt;</code> </strong>representa un elemento cliqueable de tipo botón que puede ser utilizado en formularios o en cualquier parte de la página que necesite un botón estándar y simple de aplicar.</span> De forma predeterminada, los botones HTML se presentan con un estilo similar en todas las plataformas, estos estilos se pueden cambiar utilizando <a href="https://developer.mozilla.org/en-US/docs/Web/CSS">CSS</a>.</dt>
+
+ <dd><strong>Sus etiquetas son</strong>: &lt;button&gt; y &lt;/button&gt; (ambas obligatorias).
+ 
+ <strong>Crea una caja</strong>: en linea.
+
+ <strong>Está definido como</strong>: <a href="/es/docs/HTML/Elemento/Tipos_de_elementos#de_frase" title="HTML/Elemento/Tipos_de_elementos#de_frase">Elemento de control para formulario</a>.
+
+ <strong>Puede contener</strong>: Texto y/o cero o más elementos <a href="/es/docs/HTML/Elemento/Tipos_de_elementos#en_linea" title="HTML/Elemento/Tipos_de_elementos#en_linea">en Bloque</a> o <a href="/es/docs/HTML/Elemento/Tipos_de_elementos#en_linea" title="HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a>, con las siguientes excepciones: (A|%formctrl;|FORM|FIELDSET)</dd>
 </dl>
 
 <h2 id="Atributos" name="Atributos">Atributos</h2>
