--- a/files/es/web/html/element/col/index.html
+++ b/files/es/web/html/element/col/index.html
@@ -10,22 +10,16 @@ original_slug: Web/HTML/Elemento/col
 ---
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p>Permite especificar propiedades para una columna o un grupo de ellas.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: <code>&lt;col&gt;</code> (solo tiene una).</dd>
-</dl>
+<dt>Permite especificar propiedades para una columna o un grupo de ellas.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: No.</dd>
-</dl>
-
-<dl>
- <dd><strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#para_tablas">para tablas.</a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Puede contener</strong>: Nada.</dd>
+ <dd><strong>Sus etiquetas son</strong>: <code>&lt;col&gt;</code> (solo tiene una).
+ 
+ <strong>Crea una caja</strong>: No.
+ 
+ <strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#para_tablas">para tablas.</a>.
+ 
+ <strong>Puede contener</strong>: Nada.</dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
