--- a/files/es/web/html/element/content/index.html
+++ b/files/es/web/html/element/content/index.html
@@ -91,7 +91,7 @@ original_slug: Web/HTML/Elemento/content
 
 <h2 id="Especificaciones">Especificaciones</h2>
 
-<table class="spec-table standard-table">
+<table class="">
  <tbody>
   <tr>
    <th scope="col">Especificación</th>
