--- a/files/es/web/html/element/dd/index.html
+++ b/files/es/web/html/element/dd/index.html
@@ -21,7 +21,7 @@ original_slug: Web/HTML/Elemento/dd
 
 <div>{{EmbedInteractiveExample("pages/tabbed/dd.html", "tabbed-standard")}}</div>
 
-<p class="hidden">La fuente para este ejemplo interactivo esta almacenado en un repositorio GitHub. Si desea contribuir al poryecto de ejemplos interactivos, por favor clone <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples </a> y envíe una petición de extracción (pull request).</p>
+<p class="">La fuente para este ejemplo interactivo esta almacenado en un repositorio GitHub. Si desea contribuir al poryecto de ejemplos interactivos, por favor clone <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples </a> y envíe una petición de extracción (pull request).</p>
 
 <table class="properties">
  <tbody>
