--- a/files/es/web/html/element/dialog/index.html
+++ b/files/es/web/html/element/dialog/index.html
@@ -135,7 +135,7 @@ original_slug: Web/HTML/Elemento/dialog
 
 <p> </p>
 
-<div class="hidden">
+<div class="">
 <p>The compatibility table in this page is generated from structured data. If you'd like to contribute to the data, please check out <a href="https://github.com/mdn/browser-compat-data">https://github.com/mdn/browser-compat-data</a> and send us a pull request.</p>
 </div>
 
