--- a/files/es/web/html/element/font/index.html
+++ b/files/es/web/html/element/font/index.html
@@ -10,20 +10,18 @@ original_slug: Web/HTML/Elemento/font
 ---
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p><strong>font</strong> -<em>fuente</em> . Indica el tamaño, color, o fuente del texto que contiene.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: &lt;font&gt; y &lt;/font&gt; (ambas obligatorias).</dd>
- <dd><strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#desaprobado">desaprobado</a>.
- <dl>
-  <dd>En un doctype transicional está definido como un elemento <a href="es/HTML/Elemento/Tipos_de_elementos#especial">especial</a> y por lo tanto <a href="es/HTML/Elemento/Tipos_de_elementos#enlinea">en línea</a>.</dd>
- </dl>
- </dd>
-</dl>
+<dt><strong>font</strong> -<em>fuente</em> . Indica el tamaño, color, o fuente del texto que contiene.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: En línea.</dd>
- <dd><strong>Puede contener</strong>: Texto, y/o cero o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#enlinea">en línea </a>.</dd>
+ <dd><strong>Sus etiquetas son</strong>: &lt;font&gt; y &lt;/font&gt; (ambas obligatorias).
+
+ <strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#desaprobado">desaprobado</a>.
+ 
+  En un doctype transicional está definido como un elemento <a href="es/HTML/Elemento/Tipos_de_elementos#especial">especial</a> y por lo tanto <a href="es/HTML/Elemento/Tipos_de_elementos#enlinea">en línea</a>.
+ 
+ <strong>Crea una caja</strong>: En línea.
+
+ <strong>Puede contener</strong>: Texto, y/o cero o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#enlinea">en línea </a>.</dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
@@ -116,7 +114,7 @@ original_slug: Web/HTML/Elemento/font
 <p>Resultado:</p>
 
 <div style="border: solid silver 1px;">
-<p>Texto normal y ... <font color="#0000ff" size="5"> Texto distinto. </font></p>
+<p>Texto normal y ...  Texto distinto. </p>
 </div>
 </div>
 
