--- a/files/es/web/html/element/frame/index.html
+++ b/files/es/web/html/element/frame/index.html
@@ -10,16 +10,16 @@ original_slug: Web/HTML/Elemento/frame
 ---
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p><strong>frame</strong> -<em>marcos</em> . Define la organización de los marcos dentro de la ventana del usuario.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: <code>&lt;frame&gt;</code> (solo tiene una).</dd>
- <dd><strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#paramarcos">para marcos</a>.</dd>
-</dl>
+<dt><strong>frame</strong> -<em>marcos</em> . Define la organización de los marcos dentro de la ventana del usuario.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: .</dd>
- <dd><strong>Puede contener</strong>: Nada.</dd>
+ <dd><strong>Sus etiquetas son</strong>: <code>&lt;frame&gt;</code> (solo tiene una).
+
+ <strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#paramarcos">para marcos</a>.
+ 
+ <strong>Crea una caja</strong>: .
+ 
+ <strong>Puede contener</strong>: Nada.</dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
