--- a/files/es/web/html/element/i/index.html
+++ b/files/es/web/html/element/i/index.html
@@ -12,22 +12,16 @@ original_slug: Web/HTML/Elemento/i
 
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p>Muestra el texto marcado con un estilo en cursiva o italica.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: &lt;i&gt; y &lt;/i&gt; (Ambas obligatorias)</dd>
-</dl>
+<dt>Muestra el texto marcado con un estilo en cursiva o italica.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Está definido como</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#de_estilo_de_fuente">Elemento de estilo de fuente</a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Puede contener</strong>: cero o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a></dd>
+ <dd><strong>Sus etiquetas son</strong>: &lt;i&gt; y &lt;/i&gt; (Ambas obligatorias)
+ 
+ <strong>Crea una caja</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a>.
+ 
+ <strong>Está definido como</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#de_estilo_de_fuente">Elemento de estilo de fuente</a>.
+ 
+ <strong>Puede contener</strong>: cero o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a></dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
