--- a/files/es/web/html/element/img/index.html
+++ b/files/es/web/html/element/img/index.html
@@ -195,7 +195,7 @@ original_slug: Web/HTML/Elemento/img
       <span class="attr-name token">srcset</span><span class="attr-value token"><span class="punctuation token">=</span><span class="punctuation token">"</span>clock-demo-thumb-200.png 200w, clock-demo-thumb-400.png 400w<span class="punctuation token">"</span></span>
       <span class="attr-name token">sizes</span><span class="attr-value token"><span class="punctuation token">=</span><span class="punctuation token">"</span>(min-width: 600px) 200px, 50vw<span class="punctuation token">"</span></span><span class="punctuation token">&gt;</span></span></code></pre>
 
-<article class="approved text-content">
+<article class="">
 <div class="boxed translate-rendered">
 <h2 id="Especificaciones">Especificaciones</h2>
 
