--- a/files/es/web/html/element/input/datetime-local/index.html
+++ b/files/es/web/html/element/input/datetime-local/index.html
@@ -41,7 +41,7 @@ original_slug: Web/HTML/Element/input/datetime
 
 <h2 id="Ejemplos">Ejemplos</h2>
 
-<div class="geckoVersionNote">
+<div class="">
 <p><code><span class="highELE">input</span> <span class="highATT">type=</span><span class="highVAL">"datetime"</span> <span class="highATT">name=</span><span class="highVAL">"new_year"</span><span class="highGT"> </span></code></p>
 </div>
 
