--- a/files/es/web/html/element/map/index.html
+++ b/files/es/web/html/element/map/index.html
@@ -10,22 +10,16 @@ original_slug: Web/HTML/Elemento/map
 ---
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p><span class="comment">descripción de uno o dos párrafos</span></p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: &lt;map&gt; y &lt;/map&gt; (ambas obligatorias).</dd>
-</dl>
+<dt><span class="comment">descripción de uno o dos párrafos</span></dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_bloque"> En bloque </a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Está definido como</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#especial"> Elemento especial</a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Puede contener</strong>: Uno o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#en_bloque">en bloque </a>, o elementos <a href="es/HTML/Elemento/area">area</a></dd>
+ <dd><strong>Sus etiquetas son</strong>: &lt;map&gt; y &lt;/map&gt; (ambas obligatorias).
+ 
+ <strong>Crea una caja</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_bloque"> En bloque </a>.
+ 
+ <strong>Está definido como</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#especial"> Elemento especial</a>.
+ 
+ <strong>Puede contener</strong>: Uno o más elementos <a href="es/HTML/Elemento/Tipos_de_elementos#en_bloque">en bloque </a>, o elementos <a href="es/HTML/Elemento/area">area</a></dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
