--- a/files/es/web/html/element/object/index.html
+++ b/files/es/web/html/element/object/index.html
@@ -17,7 +17,7 @@ original_slug: Web/HTML/Elemento/object
 
 <div>{{EmbedInteractiveExample("pages/tabbed/object.html", "tabbed-standard")}}</div>
 
-<p class="hidden">La fuente original de este ejemplo interactivo está almacenada en un repositorio de GitHub. Si quieres contribuir al proyecto de ejemplos interactivos, por favor clona <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples </a> y envíanos un pull request.</p>
+<p class="">La fuente original de este ejemplo interactivo está almacenada en un repositorio de GitHub. Si quieres contribuir al proyecto de ejemplos interactivos, por favor clona <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples </a> y envíanos un pull request.</p>
 
 <table class="properties">
  <tbody>
