--- a/files/es/web/html/element/param/index.html
+++ b/files/es/web/html/element/param/index.html
@@ -10,27 +10,18 @@ original_slug: Web/HTML/Elemento/param
 ---
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p><strong>param</strong> de "parameter" = parámetro. Permite especificar parámetros de ejecución para un objeto.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: <code>&lt;param&gt;</code> (solo tiene una).</dd>
-</dl>
+<dt><strong>param</strong> de "parameter" = parámetro. Permite especificar parámetros de ejecución para un objeto.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: No.</dd>
-</dl>
+ <dd><strong>Sus etiquetas son</strong>: <code>&lt;param&gt;</code> (solo tiene una).
+ 
+ <strong>Crea una caja</strong>: No.
+ 
+ <strong>Está definido como</strong>: .
+ 
+ <strong>Puede contener</strong>: Nada.
 
-<dl>
- <dd><strong>Está definido como</strong>: .</dd>
-</dl>
-
-<dl>
- <dd><strong>Puede contener</strong>: Nada.
-
- <dl>
-  <dd><strong>Puede ser contenido por</strong>: El elemento <a href="es/HTML/Elemento/object">object</a>, y el desaprobado <a href="es/HTML/Elemento/applet">applet</a>.</dd>
- </dl>
- </dd>
+ <strong>Puede ser contenido por</strong>: El elemento <a href="es/HTML/Elemento/object">object</a>, y el desaprobado <a href="es/HTML/Elemento/applet">applet</a>.</dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
