--- a/files/es/web/html/element/source/index.html
+++ b/files/es/web/html/element/source/index.html
@@ -14,7 +14,7 @@ original_slug: Web/HTML/Elemento/source
 
 <div>{{EmbedInteractiveExample("pages/tabbed/source.html", "tabbed-standard")}}</div>
 
-<p class="hidden">La fuente de este ejemplo interactivo se almacena en un repositorio de GitHub. Si desea contribuir al proyecto de ejemplos interactivos, por favor clone <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples </a> y envíenos una solicitud de pull.</p>
+<p class="">La fuente de este ejemplo interactivo se almacena en un repositorio de GitHub. Si desea contribuir al proyecto de ejemplos interactivos, por favor clone <a href="https://github.com/mdn/interactive-examples">https://github.com/mdn/interactive-examples </a> y envíenos una solicitud de pull.</p>
 
 <table class="properties">
  <tbody>
