--- a/files/es/web/html/element/ul/index.html
+++ b/files/es/web/html/element/ul/index.html
@@ -10,16 +10,16 @@ original_slug: Web/HTML/Elemento/ul
 ---
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p><strong>ul</strong> de "unordered list" -<em>lista no ordenada</em> . crea una lista no ordenada.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: <code>&lt;ul&gt; y &lt;/ul&gt;</code> (ambas obligatorias).</dd>
- <dd><strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#delista">para listas</a>.</dd>
-</dl>
+<dt><strong>ul</strong> de "unordered list" -<em>lista no ordenada</em> . crea una lista no ordenada.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: En bloque.</dd>
- <dd><strong>Puede contener</strong>: Uno o más elementos <a href="es/HTML/Elemento/li">li</a></dd>
+ <dd><strong>Sus etiquetas son</strong>: <code>&lt;ul&gt; y &lt;/ul&gt;</code> (ambas obligatorias).
+
+ <strong>Está definido como</strong>: Elemento <a href="es/HTML/Elemento/Tipos_de_elementos#delista">para listas</a>.
+ 
+ <strong>Crea una caja</strong>: En bloque.
+
+ <strong>Puede contener</strong>: Uno o más elementos <a href="es/HTML/Elemento/li">li</a></dd>
 </dl>
 
 <h4 id="Atributos" name="Atributos">Atributos</h4>
