--- a/files/es/web/html/element/var/index.html
+++ b/files/es/web/html/element/var/index.html
@@ -12,22 +12,16 @@ original_slug: Web/HTML/Elemento/var
 
 <h3 id="Definici.C3.B3n" name="Definici.C3.B3n">Definición</h3>
 
-<p>Marca variables de programas y similares.</p>
-
 <dl>
- <dd><strong>Sus etiquetas son</strong>: &lt;var&gt; y &lt;/var&gt; (ambas obligatorias)</dd>
-</dl>
+<dt>Marca variables de programas y similares.</dt>
 
-<dl>
- <dd><strong>Crea una caja</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a>.</dd>
-</dl>
+ <dd><strong>Sus etiquetas son</strong>: &lt;var&gt; y &lt;/var&gt; (ambas obligatorias)
 
-<dl>
- <dd><strong>Está definido como</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#de_frase">Elemento de frase</a>.</dd>
-</dl>
-
-<dl>
- <dd><strong>Puede contener</strong>: cero o más elementos<a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a></dd>
+ <strong>Crea una caja</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a>.
+ 
+ <strong>Está definido como</strong>: <a href="es/HTML/Elemento/Tipos_de_elementos#de_frase">Elemento de frase</a>.
+ 
+ <strong>Puede contener</strong>: cero o más elementos<a href="es/HTML/Elemento/Tipos_de_elementos#en_linea">en linea</a></dd>
 </dl>
 
 <h5 id="Atributos_Gen.C3.A9ricos" name="Atributos_Gen.C3.A9ricos">Atributos Genéricos</h5>
@@ -37,11 +31,9 @@ original_slug: Web/HTML/Elemento/var
  <li>style (información de estilo en línea)</li>
 </ul>
 
-<dl>
- <dd><strong>Identificadores</strong>: id, class (identificadores a nivel de documento)</dd>
- <dd><strong>Idioma</strong>: lang (información sobre el idioma), dir (dirección del texto)</dd>
- <dd><strong>Eventos</strong>: onclick, ondblclick, onmousedown, onmouseup, onmouseover, onmousemove, onmouseout, onkeypress, onkeydown, onkeyup.</dd>
-</dl>
+<strong>Identificadores</strong>: id, class (identificadores a nivel de documento)
+<strong>Idioma</strong>: lang (información sobre el idioma), dir (dirección del texto)
+<strong>Eventos</strong>: onclick, ondblclick, onmousedown, onmouseup, onmouseover, onmousemove, onmouseout, onkeypress, onkeydown, onkeyup.
 
 <h5 id="Atributos_Espec.C3.ADficos_-_No_tiene." name="Atributos_Espec.C3.ADficos_-_No_tiene.">Atributos Específicos - No tiene.</h5>
 
